# verdict

./: .env.example  .gitattributes  .gitignore  Dockerfile  HACKATHON.md  LICENSE  README.md  TESTING.md  VERDICT_INTELLIGENCE.md  Verifier_Project_Direction.docx  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
action/: action.yml  example-workflow.yml  post_check.py
docker/: entrypoint.sh
hackathon/benchmark/: .gitignore  prepare_data.py  rapids_vs_pandas.py  results.json
hackathon/security_gen_eval/: dataset.json  extract_dataset.py  gate_results.json  gate_results_run1_before_fixes.json  run_eval.py
phase0/: collect_data.py  dataset.json  generate_scenarios.py  label.py  labels.json  report.py  retry_failed.py  scenarios.json
phase1/: gate.py  gate_results.json
phase2/: gate.py  gate_results.json
phase3/: gate.py  gate_results.json
phase4/: README.md  test_github.py  test_results.json
phase5/: gate.py  gate_results.json
test/auth-demo/: app.py
test/auth-demo/static/: style.css
test/auth-demo/templates/: dashboard.html  login.html  signup.html
tests/: conftest.py  test_agent_events.py  test_agents.py  test_findings_store.py  test_intelligence_ui.py  test_security_validator.py
verdict/: __init__.py  audit.py  authoring.py  cli.py  config.py  depcheck.py  findings.py  generator.py  health.py  hooks.py  hybrid.py  intent.py  llm.py  ollama.py  pipeline.py  reporter.py  sandbox.py  scorer.py  store.py  testgen.py  ui.py  validator.py
verdict/agents/: __init__.py  correlator.py  events.py  remediation.py  triage.py  verifier.py
verdict/server/: __init__.py  api.py  github.py  queue.py
