[project]
name = "verdict"
version = "0.1.0"
description = "Independent, self-hosted pre-deployment verification for AI-generated and human-written code."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.19",
    "pyyaml>=6.0",
    "pyflakes>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# Server mode (Phases 2-3): Postgres data layer, API gateway, queue/workers.
# The plain CLI never needs these - core deps stay light on purpose.
server = [
    "psycopg[binary]>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

[project.scripts]
verdict = "verdict.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["verdict", "verdict.server"]
