[project]
# "verdict" is already taken on PyPI by an unrelated project (an LLM-eval
# framework) - the CLI command stays `verdict` regardless (see
# [project.scripts] below), only the `pip install` name changes.
name = "verdict-cli"
version = "0.1.0"
description = "Independent, self-hosted pre-deployment verification for AI-generated and human-written code."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Animesh Gupta", email = "theanimeshgupta@gmail.com" },
]
keywords = ["ai", "code-review", "testing", "verification", "llm", "ci-cd", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.19",
    "click>=8.0",
    "pyyaml>=6.0",
    "pyflakes>=3.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/anxmeshhh/verdict"
Repository = "https://github.com/anxmeshhh/verdict"
Issues = "https://github.com/anxmeshhh/verdict/issues"

[project.optional-dependencies]
# Server mode (Phases 2-3): Postgres data layer, API gateway, queue/workers.
# The plain CLI never needs these - core deps stay light on purpose.
server = [
    "psycopg[binary]>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
verdict = "verdict.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["verdict", "verdict.server", "verdict.agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Agent-layer tests mock the LLM boundary and don't need Postgres; the ones
# that do touch a real DB are marked 'postgres' and skipped unless a dev
# fixture is reachable (see tests/conftest.py).
markers = [
    "postgres: needs a reachable Postgres (the dev fixture on :5433)",
]
